--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,27 @@
 .idea
 __pycache__/
 db.sqlite3
-media
+/frontend/node_modules
+/frontend/package-lock.json
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
